# rendux

./: .gitignore  pyproject.toml
config/: themes.yaml  views.yaml
demo/: main.py
demo/templates/partials/: tab_code.html  tab_config.html  tab_overview.html
rendux/core/: layout.py  mapper.py  registries.py  responses.py  themes.py  toon.py
rendux/static/css/: app.css  themes.css
rendux/static/js/: theme.js
rendux/templates/: base.html
rendux/templates/chrome/shells/: blank.html  default.html
rendux/templates/widgets/: alert.html  avatar.html  badge.html  breadcrumb.html  button.html  card.html  code_block.html  collapsible.html  command_palette.html  context_menu.html  data_table.html  divider.html  drawer.html  empty_state.html  file_drop.html  form.html  item_list.html  kv_table.html  modal.html  multi_select.html  nav_rail.html  pagination.html  panel.html  popover.html  progress_bar.html  skeleton.html  split_pane.html  stat_card.html  status_badge.html  status_grid.html  stepper.html  tab_bar.html  tabs.html  tag.html  theme_switcher.html  timeline.html  toast.html  tooltip.html
rendux/templates/workspaces/: _declarative.html  about.html  components.html  home.html
rendux/views/: routes.py  service.py
tests/: test_api_envelope.py  test_layout.py  test_mapper.py  test_shell_contract.py  test_toon.py  test_views.py
tests/fixtures/: views_bad.yaml  views_good.yaml
