[project]
name = "rendux"
version = "0.1.0"
description = "Config-driven UI shell runtime — declarative views rendered with injectable application logic"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.10.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
